# pytc-client

./: .dockerignore  .env.example  .gitignore  .gitmodules  .test_endpoints.sh.swp  .yamllint  AGENTS.md  COPILOT.md  DEVLOG.md  Dockerfile  Getting_Started.md  MIGRATION_GUIDE.md  README.md  README_DEV.md  app_event_logger.py  bash.exe.stackdump  docker-compose.yaml  main.py  main.spec  neuroglancer_url.txt  package-lock.json  project-structure.md  pyproject.toml  pytest.ini  run.sh  runtime_settings.py  setup_pytorch_connectomics.sh  sql_app.db  start.bat  start.sh  start_neuroglancer.py  test_endpoints.sh  verify_checkpoint.py
client/: .env  README.md  main.js  package-lock.json  package.json  preload.js
docs/: agent-role-spec.md  case-study-prototype-readiness.md  closed-loop-smoke.md  manual-bulk-test-checklist.md  manual-yixiao-case-study-demo.md  platform-hardening-branch-scope.md  proofreading-redesign-notes.md  prototype-completion-roadmap.md  remote-codex-handoff.md  synthetic-core-project.md
list/: pyvenv.cfg
scripts/: bootstrap.ps1  bootstrap.sh  browser_synthetic_core_smoke.py  browser_yixiao_case_study_smoke.py  check_demo_health.py  create_synthetic_project.py  dev.ps1  dev.sh  docker-entrypoint.sh  generate_preview.py  h5_to_tiff.py  ingest_data.py  ingest_prepilot_datasets.py  initialize_external_metadata.py  inspect_demo_instance.py  kill.sh  manage_demo_instance.py  migrate_metadata.py  parse_previews.py  preview_output.txt  run_browser_synthetic_core_smoke_ci.sh  run_closed_loop_smoke.py  run_dbos_operation_spike.py  run_yixiao_case_study_smoke.py  (+5 more)
(+356 files in other folders)
