[project]
name = "pytc-client"
version = "0.1.0"
description = "PyTC Client backend services"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn==0.38.0",
    "python-multipart==0.0.20",
    "neuroglancer==2.38",
    "imageio==2.37.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "psutil>=5.9.0",
]
