[project]
name = "pytc-client"
version = "0.1.0"
description = "PyTC Client backend services"
requires-python = ">=3.10,<3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "faiss-cpu==1.12.0",
    "fastapi==0.119.0",
    "h5py>=3.11",
    "imageio==2.37.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-ollama==1.0.0",
    "neuroglancer==2.38",
    "numpy>=1.24,<2.0",
    "passlib>=1.7.4",
    "pillow>=10.0",
    "psutil>=5.9.0",
    "python-jose>=3.5.0",
    "python-multipart==0.0.20",
    "requests>=2.31",
    "scipy>=1.11",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "uvicorn==0.38.0",
    "zarr>=2.18",
    "connectomics",
]

[tool.uv.sources]
connectomics = { path = "pytorch_connectomics", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.27,<0.29",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]
